--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,4 @@ set(CMAKE_CXX_STANDARD 17)
 
 add_executable(CG_Basic main.cpp TransformMatrix.cpp TransformMatrix.h Renderer.cpp Renderer.h Shader.cpp Shader.h Primitive.cpp Primitive.h ThirdParty/OBJ_Loader.h Rasterizer.cpp Rasterizer.h ScreenBuffer.cpp ScreenBuffer.h)
 target_link_libraries(CG_Basic ${OpenCV_LIBRARIES})
+file(COPY Resources DESTINATION ./)
